taskbar bug on mobile and tablet

--- a/src/components/utility.css
+++ b/src/components/utility.css
@@ -1,5 +1,5 @@
 .utility{
-    position: absolute;
+    position: fixed;
     top: 96vh;
     width: 35vw;
     height: 1.7vh;
